[gd_scene load_steps=19 format=2]

[ext_resource path="res://materials/wall_accent.material" type="Material" id=1]
[ext_resource path="res://materials/sphere.material" type="Material" id=2]
[ext_resource path="res://materials/wall.material" type="Material" id=3]
[ext_resource path="res://materials/floor.material" type="Material" id=4]
[ext_resource path="res://materials/cylinder.material" type="Material" id=5]
[ext_resource path="res://shaders/night_vision_grainy_alt/NightVisionGrainyAlt.tscn" type="PackedScene" id=6]
[ext_resource path="res://shaders/night_vision_grainy/NightVisionGrainy.tscn" type="PackedScene" id=7]
[ext_resource path="res://shaders/night_vision_blur_line/NightVisionBlurLine.tscn" type="PackedScene" id=8]
[ext_resource path="res://shaders/night_vision_scanlines/NightVisionScanlines.tscn" type="PackedScene" id=9]
[ext_resource path="res://sphere.gd" type="Script" id=10]
[ext_resource path="res://shaders/night_vision_pixelated/NightVisionPixelated.tscn" type="PackedScene" id=11]
[ext_resource path="res://main.gd" type="Script" id=12]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 2, 4 )

[sub_resource type="PlaneMesh" id=2]
material = ExtResource( 3 )
size = Vector2( 2, 4 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 4, 2 )

[sub_resource type="SphereShape" id=4]
radius = 0.5

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2, 0.01, 2 )

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 4, 4 )

[node name="Main" type="Spatial"]
script = ExtResource( 12 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62377, 3.95598 )

[node name="ScreenShaders" type="Spatial" parent="."]

[node name="NightVisionGrainy" parent="ScreenShaders" instance=ExtResource( 7 )]

[node name="NightVisionGrainyAlt" parent="ScreenShaders" instance=ExtResource( 6 )]

[node name="NightVisionBlurLine" parent="ScreenShaders" instance=ExtResource( 8 )]

[node name="NightVisionScanlines" parent="ScreenShaders" instance=ExtResource( 9 )]

[node name="NightVisionPixelated" parent="ScreenShaders" instance=ExtResource( 11 )]

[node name="Room" type="Spatial" parent="."]

[node name="WallRight" type="MeshInstance" parent="Room"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 2, 1, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )

[node name="WallLeft" type="MeshInstance" parent="Room"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, -2, 1, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="WallBack" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, -2 )
mesh = SubResource( 3 )
material/0 = ExtResource( 1 )

[node name="Cylinder" type="CSGCylinder" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.939534, 0.330695, -1.03698 )
use_collision = true
radius = 0.5
height = 0.688283
material = ExtResource( 5 )

[node name="Sphere" type="KinematicBody" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.968038, 0.51504, 0 )
script = ExtResource( 10 )

[node name="Sphere" type="CSGSphere" parent="Room/Sphere"]
radius = 0.5
material = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Room/Sphere"]
shape = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="Room/Sphere"]
enabled = true

[node name="StaticBody" type="StaticBody" parent="Room"]

[node name="CollisionShape" type="CollisionShape" parent="Room/StaticBody"]
shape = SubResource( 5 )

[node name="Floor" type="MeshInstance" parent="Room/StaticBody"]
mesh = SubResource( 6 )
material/0 = ExtResource( 4 )

[node name="ShaderSelector" type="OptionButton" parent="."]
margin_left = 8.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 28.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.008
anchor_top = 0.063
anchor_right = 0.128
anchor_bottom = 0.222
margin_left = 0.622514
margin_top = 10.0
margin_right = 55.7425
margin_bottom = -0.200012
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sphere Movement Controls:
======================
Arrow keys to move
Space to jump"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ShaderSelector" to="." method="_on_shader_selector_item_selected"]
